<resources>
    <string name="app_name">Final.Project.Haomei.Liu</string>

    <string name="facebook_app_id">1050240708648609</string>
    <string name="fb_login_protocol_scheme">fb1050240708648609</string>
    <string name="prompt_password">password</string>
    <string name="prompt_email">username</string>
    <string name="action_sign_in_short">sign in</string>
    <string name="action_sign_in">sign in</string>

    <string name="ui_loading_text">Loading...</string>

    <string name="sdcard_not_exist_toast">SD Card does not exist</string>

    <!--    bottom navigation-->
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="chat">chat</string>
    <string name="more">more</string>
    <string name="me">Profile</string>
    <string name="history">Past Events</string>

    <!--    jmui -->
    <string name="jmui_time_format_accuracy">yyyy-MM-dd HH:mm:ss </string>
    <string name="jmui_monday">Mon</string>
    <string name="jmui_tuesday">Tue</string>
    <string name="jmui_wednesday">Wed</string>
    <string name="jmui_thursday">Thu</string>
    <string name="jmui_friday">Fri</string>
    <string name="jmui_saturday">Sat</string>
    <string name="jmui_sunday">Sun</string>

    <string name="firebase_path">location</string>
    <string name="tracking_enabled_notif">Tracking is currently enabled. Tap to cancel.</string>
    <string name="test_email">test@test.com</string>
    <string name="test_password">testpassword</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
